--- a/src/examples/nog/app/views/posts/show.html.jade
+++ b/src/examples/nog/app/views/posts/show.html.jade
@@ -4,7 +4,7 @@ html
   body
     h1
       | Hi There
-      = this.params.id
+      = params.id
     .content
       | I heard you liked
-      = this.data.food
+      = data.food
