Starts to add some view helpers

--- a/src/examples/nog/app/views/layouts/application.html.jade
+++ b/src/examples/nog/app/views/layouts/application.html.jade
@@ -1,4 +1,7 @@
 !!! 5
 html
+  head
+    != this.javascriptIncludeTag('foo')
+    != this.cssIncludeTag('applicaton')
   body
-    != content.main
+    != this.yield('main')
